--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2016",
         "module": "commonjs",
-        "rootDir": "./",
+        "rootDir": "./src",
         "outDir": "./dist",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
@@ -10,7 +10,6 @@
         "skipLibCheck": true
     },
     "include": [
-        "src/**/*",
-        "prisma/**/*"
+        "src/**/*"
     ]
 }
